# flower

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/flower/: blob.h  feature.h  fully_connected.h  gradient_descent.h  gradient_descent.inl  hinge_loss.h  layer.h  layer.inl  net.h  net.inl  optimizer.h  optimizer.inl  sigmoid.h  softmax_loss.h  supervised_learning.h  tensor.h  tensor.inl
include/flower/layer/: batch_normalization.h  convolution.h  convolution.inl  dropout.h  elu.h  elu.inl  fully_connected.h  fully_connected.inl  pooling.h  relu.h  relu.inl  sigmoid.h  sigmoid.inl  tanh.h  tanh.inl
include/flower/optimizer/: adam.h  momentum.h  rms_prop.h  stochastic_gradient_descent.h  vanilla.h  vanilla.inl
samples/: cifar10_fully_connected.cpp  sanity_check.cpp
samples/data/: cifar10.h  cifar10.inl
src/flower/: blob.cpp  feature.cpp  fully_connected.cpp  gradient_descent.cpp  hinge_loss.cpp  layer.cpp  net.cpp  optimizer.cpp  sigmoid.cpp  softmax_loss.cpp  supervised_learning.cpp
src/flower/layer/: batch_normalization.cpp  convolution.cpp  dropout.cpp  elu.cpp  fully_connected.cpp  pooling.cpp  relu.cpp  sigmoid.cpp  tanh.cpp
src/flower/optimizer/: adam.cpp  momentum.cpp  rms_prop.cpp  stochastic_gradient_descent.cpp  vanilla.cpp
